# snark-verifier-tests

./: .gitignore  README.md  foundry.toml
calldata_encoder/: Cargo.toml  proof.calldata
calldata_encoder/programs/10_public_io/: Verifier.toml
calldata_encoder/programs/11_public_io_array/: Verifier.toml
calldata_encoder/src/: main.rs
contracts/: Counter.sol  PublicIOArrayVerifierWrapper.sol  PublicIOVerifierWrapper.sol  VerifierWrapper.sol  YulDeployer.sol
snark-verifiers/: 10_public_io_array.yul
snark-verifiers/data/: 10_public_io_array.calldata  9_public_io.calldata
test/: PublicIOArrayVerifier.t.sol  PublicIOVerifier.t.sol  Verifier.t.sol  YulDeployer.t.sol
