[package]
name = "calldata_encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pse_snark_verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", package = "snark-verifier", tag = "v2023_04_20", features = [
    "halo2_circuit_params",
] }
pse_halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", package = "halo2wrong", tag = "v2023_04_20", features = [
    "circuit-params",
] }
acvm = "0.18.1"
serde_json = "1.0.104"
hex = "0.4.3"
clap = { version = "4.3.21", features = ["derive"] }
